[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/LobbyUI.gd" type="Script" id=1]
[ext_resource path="res://GUI/Data/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://GUI/Assets/Main_UI.png" type="Texture" id=3]
[ext_resource path="res://GUI/Data/ui_title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Player/Assets/Player.png" type="Texture" id=5]
[ext_resource path="res://Player/skin.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/replace_color = Color( 0.996078, 0.952941, 0.752941, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="LobbyUI" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="TitleScreen"]
anchor_right = 1.0
margin_top = 78.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "Multiplayer Bomber Man"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -308.0
margin_right = 512.0
margin_bottom = -148.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer1" type="HBoxContainer" parent="TitleScreen/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 112.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/VBoxContainer/HBoxContainer1"]
margin_right = 97.0
margin_bottom = 112.0
custom_constants/separation = 32

[node name="LabelName" type="Label" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_right = 97.0
margin_bottom = 38.0
text = "Name:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIP" type="Label" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_top = 70.0
margin_right = 97.0
margin_bottom = 108.0
text = "IP:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="TitleScreen/VBoxContainer/HBoxContainer1"]
margin_left = 129.0
margin_right = 1024.0
margin_bottom = 112.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="TextName" type="LineEdit" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_right = 895.0
margin_bottom = 48.0
max_length = 20
placeholder_text = "your name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextIP" type="LineEdit" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 64.0
margin_right = 895.0
margin_bottom = 112.0
text = "127.0.0.1"
max_length = 20
placeholder_text = "the lobby ip to join"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="TitleScreen/VBoxContainer"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 188.0
custom_constants/separation = 64

[node name="ButtonHost" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer2"]
margin_right = 480.0
margin_bottom = 44.0
size_flags_horizontal = 3
disabled = true
text = "Host Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer2"]
margin_left = 544.0
margin_right = 1024.0
margin_bottom = 44.0
size_flags_horizontal = 3
disabled = true
text = "Join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.0
margin_top = 6.0
margin_right = 351.0
margin_bottom = 186.0
custom_colors/default_color = Color( 0.380392, 0.670588, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]Made by: Qingwen Liu.
Website: [url=http://liuqingwen.me]http://liuqingwen.me[/url]
Made with [url=https://godotengine.org/]Godot Game Engine[/url].[/center]"
text = "Made by: Qingwen Liu.
Website: http://liuqingwen.me
Made with Godot Game Engine."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="StartScreen"]
anchor_right = 1.0
margin_top = 51.0
margin_bottom = 89.0
text = "Waiting for other players or just start game..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 116.0
margin_right = 512.0
margin_bottom = 654.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="StartScreen/VBoxContainer"]
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPlayerCount" type="Label" parent="StartScreen/VBoxContainer"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 182.0
text = "Players: 1/4"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="StartScreen/VBoxContainer"]
margin_top = 198.0
margin_right = 1024.0
margin_bottom = 478.0
rect_min_size = Vector2( 0, 280 )
custom_styles/bg = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListPlayerNames" type="VBoxContainer" parent="StartScreen/VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="ListPlayerNames" type="ItemList" parent="StartScreen/VBoxContainer"]
visible = false
margin_top = 198.0
margin_right = 1024.0
margin_bottom = 398.0
rect_min_size = Vector2( 400, 200 )

[node name="HBoxContainer" type="HBoxContainer" parent="StartScreen/VBoxContainer"]
margin_top = 494.0
margin_right = 1024.0
margin_bottom = 538.0
custom_constants/separation = 16

[node name="ButtonStart" type="Button" parent="StartScreen/VBoxContainer/HBoxContainer"]
margin_right = 504.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Start Game"

[node name="ButtonCancel" type="Button" parent="StartScreen/VBoxContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 1024.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Cancel Game"

[node name="ButtonContainer" type="HBoxContainer" parent="StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.5
margin_top = 86.0
margin_right = 297.5
margin_bottom = 158.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButtonHelp" type="CheckButton" parent="StartScreen/ButtonContainer"]
margin_right = 281.0
margin_bottom = 72.0
size_flags_horizontal = 3
text = "Help is Off"

[node name="CheckButtonSound" type="CheckButton" parent="StartScreen/ButtonContainer"]
margin_left = 313.0
margin_right = 595.0
margin_bottom = 72.0
size_flags_horizontal = 3
pressed = true
text = "Sound is On"

[node name="TextContainer" type="HBoxContainer" parent="StartScreen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -418.0
margin_bottom = -89.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel1" type="RichTextLabel" parent="StartScreen/TextContainer"]
margin_right = 999.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[right]move up/left/down/right -------- [rainbow freq=1.0 sat=2 val=5]W/A/S/D[/rainbow]
lay bombs --- [rainbow freq=1.0 sat=1 val=15]SPACEBAR[/rainbow]
detonate your bomb if you can ----------------- [rainbow freq=1.0 sat=1 val=1]Q[/rainbow]
show popups or quit the game ------- [rainbow freq=1.0 sat=1 val=5]ESCAPE[/rainbow]
show player names ------------- [rainbow freq=1.0 sat=2 val=4]ALT[/rainbow]
send messages --------- [rainbow freq=1.0 sat=1 val=5]ENTER[/rainbow][/right]"
text = "move up/left/down/right -------- W/A/S/D
lay bombs --- SPACEBAR
detonate your bomb if you can ----------------- Q
show popups or quit the game ------- ESCAPE
show player names ------------- ALT
send messages --------- ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="StartScreen/TextContainer"]
margin_left = 1049.0
margin_right = 2048.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[img]res://Items/Assets/Items_becomeinvulnerable.png[/img] --- player will become invulnerable
[img]res://Items/Assets/Items_healthcure.png[/img] --- Health cure for player
[img]res://Items/Assets/Items_speedup.png[/img] --- Speed up player's velocity
[img]res://Items/Assets/Items_poweradder.png[/img] --- Bomb power enhancement for player
[img]res://Items/Assets/Items_timingtriggerbomb.png[/img] --- Bomb explosion timer controller
[img]res://Items/Assets/Items_delayedtimebomb.png[/img] --- Make bomb explosion delayed
[img]res://Items/Assets/Items_powerenhancedbomb.png[/img] --- Bomb power enhancement for once"
text = " --- player will become invulnerable
 --- Health cure for player
 --- Speed up player's velocity
 --- Bomb power enhancement for player
 --- Bomb explosion timer controller
 --- Make bomb explosion delayed
 --- Bomb power enhancement for once"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextError" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -104.0
margin_bottom = -28.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 1024, 38 )
rect_clip_content = true
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.980392, 0.4, 0.188235, 1 )
text = "You mast have a name!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="text_changed" from="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2/TextName" to="." method="_on_TextName_text_changed"]
[connection signal="text_changed" from="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2/TextIP" to="." method="_on_TextIP_text_changed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer2/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer2/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/HBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="toggled" from="StartScreen/ButtonContainer/CheckButtonHelp" to="." method="_on_CheckButtonHelp_toggled"]
[connection signal="toggled" from="StartScreen/ButtonContainer/CheckButtonSound" to="." method="_on_CheckButtonSound_toggled"]
